Twenty Twenty-One: Ensure Duotone images are displayed correctly in Dark Mode.
This reduces the specificity of the CSS selector applying a dimming effect to images so that the new Duotone feature is properly applied to images.

Props walbo.
Fixes #53531.
Built from https://develop.svn.wordpress.org/trunk@51253


git-svn-id: http://core.svn.wordpress.org/trunk@50862 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/assets/css/style-dark-mode-rtl.css
+++ b/wp-content/themes/twentytwentyone/assets/css/style-dark-mode-rtl.css
@@ -17,7 +17,7 @@
 		--table--stripes-background-color: rgba(240, 240, 240, 0.15);
 	}
 
-	.is-dark-theme.is-dark-theme img {
+	.is-dark-theme img {
 		filter: brightness(0.85) contrast(1.1);
 	}
 
